--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -197,6 +197,7 @@ p{
 }
 .shonin{
   font-size: 20px;
+  text-align: center;
 }
 .percent{
   margin-top: 5px;
@@ -241,14 +242,40 @@ input {
 
 
 #heart {
-
-margin-left: 80px;
-  background-color: #ff99cc;
-    width: 400px;
-    height:300px;
-    border-radius: 40px;
-    margin-top: 100px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 100px;
+  color: #ffffff;
+  padding: 10px 20px;
+  background: -moz-linear-gradient(
+    top,
+    #ffbdf5 0%,
+    #ff82ec 25%,
+    #fc46e1);
+  background: -webkit-gradient(
+    linear, left top, left bottom,
+    from(#ffbdf5),
+    color-stop(0.25, #ff82ec),
+    to(#fc46e1));
+  -moz-border-radius: 30px;
+  -webkit-border-radius: 30px;
+  border-radius: 30px;
+  border: 3px solid #ffffff;
+  -moz-box-shadow:
+    0px 3px 11px rgba(000,000,000,0.5),
+    inset 0px 0px 1px rgba(255,000,217,1);
+  -webkit-box-shadow:
+    0px 3px 11px rgba(000,000,000,0.5),
+    inset 0px 0px 1px rgba(255,000,217,1);
+  box-shadow:
+    0px 3px 11px rgba(000,000,000,0.5),
+    inset 0px 0px 1px rgba(255,000,217,1);
+  text-shadow:
+    0px -1px 0px rgba(000,000,000,0.2),
+    0px 1px 0px rgba(255,255,255,0.3);
     font-family: uzura;
+    height: 300px;
+    width: 400px;
+    margin-left: 310px;
 }
 
 #heart2 {
@@ -260,6 +287,42 @@ margin-left: 80px;
     border-radius: 40px;
     margin-top: 50px;
     font-family: uzura;
+}
+#pink {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 100px;
+  color: #ffffff;
+  padding: 10px 20px;
+  background: -moz-linear-gradient(
+    top,
+    #ffbdf5 0%,
+    #ff82ec 25%,
+    #fc46e1);
+  background: -webkit-gradient(
+    linear, left top, left bottom,
+    from(#ffbdf5),
+    color-stop(0.25, #ff82ec),
+    to(#fc46e1));
+  -moz-border-radius: 30px;
+  -webkit-border-radius: 30px;
+  border-radius: 30px;
+  border: 3px solid #ffffff;
+  -moz-box-shadow:
+    0px 3px 11px rgba(000,000,000,0.5),
+    inset 0px 0px 1px rgba(255,000,217,1);
+  -webkit-box-shadow:
+    0px 3px 11px rgba(000,000,000,0.5),
+    inset 0px 0px 1px rgba(255,000,217,1);
+  box-shadow:
+    0px 3px 11px rgba(000,000,000,0.5),
+    inset 0px 0px 1px rgba(255,000,217,1);
+  text-shadow:
+    0px -1px 0px rgba(000,000,000,0.2),
+    0px 1px 0px rgba(255,255,255,0.3);
+    font-family: uzura;
+    height: 300px;
+    width: 400px;
+
 }
 #heart3{
 
@@ -478,26 +541,41 @@ color:#5cb85c;
   height: 100px;
 }
 
-#WP_checkoutBox input[type=button]{
-  text-align: center;
-  width: 300px;
-   height:100px !important;
 
-  font-size: 30px !important;
-
-}
-#WP_checkoutBox{
-  text-align: center;
-}
 
 .title{
   text-align: center;
 }
 
-#webpay-checkout #WP_panel.active{
-  width: 600px !important;
-  height: 900px !important;
-}
-#WP_payment{
-  font-size: 30px !important;
+
+
+.sbottom {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  color: #050505;
+  padding: 10px 20px;
+  background: -moz-linear-gradient(
+    top,
+    #f7ff00 0%,
+    #ffbf00);
+  background: -webkit-gradient(
+    linear, left top, left bottom,
+    from(#f7ff00),
+    to(#ffbf00));
+  -moz-border-radius: 30px;
+  -webkit-border-radius: 30px;
+  border-radius: 30px;
+  border: 0px solid #000000;
+  -moz-box-shadow:
+    0px 1px 3px rgba(000,000,000,0.5),
+    inset 0px 0px 1px rgba(255,255,255,0.7);
+  -webkit-box-shadow:
+    0px 1px 3px rgba(000,000,000,0.5),
+    inset 0px 0px 1px rgba(255,255,255,0.7);
+  box-shadow:
+    0px 1px 3px rgba(000,000,000,0.5),
+    inset 0px 0px 1px rgba(255,255,255,0.7);
+  text-shadow:
+    0px -1px 0px rgba(000,000,000,0.4),
+    0px 1px 0px rgba(255,255,255,0.3);
 }
