--- a/app/views/groups/goalshow.html.erb
+++ b/app/views/groups/goalshow.html.erb
@@ -30,12 +30,12 @@
 
   <%= @goal.goal_name %> を
   <%=f.number_field :quantity%>
-  <%= @goal.qunit%>完了
+  <%= @goal.qunit%>
 
 
   <div class="col10 push1">
               <%= button_tag type: "submit", id: "heart2" do %>
-              入力<i class="icon-arrow-right"></i>
+              完了！<i class="icon-arrow-right"></i>
               <% end %>
             </div>
   <% end %>
@@ -105,7 +105,7 @@
 
 
   <div class="col10 push1">
-              <%= button_tag type: "submit", id: "heart" do %>
+              <%= button_tag type: "submit", id: "pink" do %>
               完了！<i class="icon-arrow-right"></i>
               <% end %>
             </div>
