--- a/app/views/groups/goalshow.html.erb
+++ b/app/views/groups/goalshow.html.erb
@@ -137,7 +137,7 @@
 <% end %>
 </tr>
 <% k=0 %>
-<% while k<@since do %>
+<% while k<=@since do %>
 <tr>
   <th><%= k+1 %><%=@goal.frequency_unit%>目</th>
 
