--- a/app/views/groups/goalshow.html.erb
+++ b/app/views/groups/goalshow.html.erb
@@ -139,7 +139,7 @@
 <% k=0 %>
 <% while k<=@since do %>
 <tr>
-  <th><%= k+1 %><%=@goal.frequency_unit%>目</th>
+  <th><%= k %><%=@goal.frequency_unit%>目</th>
 
 <% j=0 %>
 <% while j<@memberlist.length do %>
