--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -39,9 +39,10 @@
 <div class="mygoalslist">
  <p class="user_title">グループの目標</p>
 
-<% @group_goals.each do |goal| %>
-<p class="goaleach">
- <%= link_to goal.goal_name, "/groups/#{goal.group_id}/goals/#{goal.id}", method: :get %></p>
-<% end %>
-
-  </div>
+<%@currentgroup.each do |c| %>
+  <%@goals=Goal.where(group_id: c)%>
+   <% @goals.each do |g| %>
+   <p class="goaleach">
+ <%= link_to g.goal_name, "/groups/#{g.group_id}/goals/#{g.id}", method: :get %></p>
+   <%end %>
+   <% end%>
